# Whithin-the-Light

./: CMakeLists.txt  README.md
Game/: main.cpp  snippet.txt
OGL3D/include/OGL3D/: Prerequisites.h
OGL3D/include/OGL3D/Game/: Game.h
OGL3D/include/OGL3D/Graphics/: GraphicsEngine.h  VertexArrayObject.h
OGL3D/include/OGL3D/GraphicsEngine/: GraphicsEngine.h
OGL3D/include/OGL3D/Math/: Rect.h  Vect4.h
OGL3D/include/OGL3D/Window/: Window.h
OGL3D/source/OGL3D/Game/: Game.cpp
OGL3D/source/OGL3D/Game/Win32/: Win32Game.cpp
OGL3D/source/OGL3D/Graphics/: GraphicsEngine.cpp  VertexArrayObject.cpp
OGL3D/source/OGL3D/Graphics/Win32/: Win32GraphicsEngine.cpp
OGL3D/source/OGL3D/GraphicsEngine/: GraphicsEngine.cpp
OGL3D/source/OGL3D/GraphicsEngine/Win32/: Win32GraphicsEngine.cpp
OGL3D/source/OGL3D/Math/: Vect4.cpp
OGL3D/source/OGL3D/Window/: Window.cpp
OGL3D/source/OGL3D/Window/Win32/: Win32Window.cpp
